# opensmalltalk-android

./: .gitignore  LICENSE  Makefile  README.md
app/: build.gradle
app/src/main/assets/plugins/: libGLX.so.0  libGLdispatch.so.0  libcairo.so.2  libexpat.so.1  libgio-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libpangocairo-1.0.so.0  libpangoft2-1.0.so.0
app/src/main/cpp/: CMakeLists.txt  squeak_jni.c
app/src/main/java/au/com/darkside/x11server/: XServerActivity.java
app/src/main/jniLibs/arm64-v8a/: libGL.so.1  libglib-2.0.so.0  libpango-1.0.so.0
scripts/: apply-fixes-stack.sh
